# visualisations

./: .flaskenv  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  pyproject.toml
application/: config.py  factory.py  pyproject.toml  utils.py
application/air_pollution/: views.py
application/bank_rate/: views.py
application/charities/: views.py
application/companies_house/: views.py
application/deprivation/: views.py
application/elections/: views.py
application/feedback/: views.py
application/frontend/: views.py
application/fuel_and_oil/: views.py
application/house_prices/: views.py
application/road_traffic/: views.py
application/templates/: 401.html  404.html  500.html  air-pollution.html  bank-rate.html  base.html  charities.html  companies-house.html  deprivation.html  elections.html  feedback.html  fuel-and-oil-prices.html  house-prices.html  index.html  road-traffic.html  visualisations.html
data/: 4.1.2-Table 1.csv  Average-price-seasonally-adjusted-2025-11.csv  Bank Rate history and data  Bank of England Database.csv  Top Charites.csv  fig17_urban_days_above_moderate.csv  parties-general-election-04-07-2024.csv  tra2501a-rolling-annual-miles-by-vehicle-type.csv  tra2502a-rolling-annual-miles-by-road-class.csv
data/reference/: Companies_register_activities_April_2024_to_March_2025.xlsx  IoD-2025-custom_data_download-LAD.csv  Local_Authority_District_to_Region_(April_2025)_Lookup_in_EN_v2.csv  fhrs-local-authority-by-region.csv  local-authority-by-region.csv  tra2501-miles-by-vehicle-type.ods  (+1 more)
